Fixing the alignment of the login bar in chrome by hard-setting the width of the input boxes.

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -120,6 +120,10 @@ body {
 	padding-left: 20px;
 }
 
+#header-right input[type='text'], #header-right input[type='password']{
+	width: 150px;
+}
+
 /******************************************/
 /* Page Footer Navigation Links */
 /******************************************/
